web/book/tests/examples/snapshots/examples__book__transforms__select__examples__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nselect name = f\"{first_name} {last_name}\"\n"
---
SELECT
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees

