web/book/tests/examples/snapshots/examples__book__transforms__select__examples__3.snap
---
source: web/book/tests/examples/book.rs
expression: "from e=employees\nselect {e.first_name, e.last_name}\n"
---
SELECT
  first_name,
  last_name
FROM
  employees AS e

